tambah login/forgot admin

--- a/src/views/pages/eshopping.html
+++ b/src/views/pages/eshopping.html
@@ -17,7 +17,7 @@
                     colors: {
                         'custom-teal-dark': '#063a49',
                         'custom-teal': '#1a4e69',
-                        'custom-pink': '#0866f',
+                        'custom-blue': '#0866f',
                         'custom-blue-light': '#6bbaec' // Warna dari contoh sidebar kedua
                     }
                 }
@@ -382,7 +382,7 @@
                                         <div class="text-sm text-gray-900">2024-08-15 02:12 AM</div>
                                         <div class="text-sm text-gray-500">9 months ago</div>
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-blue">YEDBKAA0023</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">RM 0</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">7 MYR</td>
@@ -393,7 +393,7 @@
                                         <div class="text-sm text-gray-900">2024-08-15 02:12 AM</div>
                                         <div class="text-sm text-gray-500">9 months ago</div>
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-blue">YEDBKAA0023</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">RM 0</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">7 MYR</td>
@@ -404,7 +404,7 @@
                                         <div class="text-sm text-gray-900">2024-08-15 02:12 AM</div>
                                         <div class="text-sm text-gray-500">9 months ago</div>
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-blue">YEDBKAA0023</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">RM 0</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">7 MYR</td>
@@ -415,7 +415,7 @@
                                         <div class="text-sm text-gray-900">2024-08-15 02:12 AM</div>
                                         <div class="text-sm text-gray-500">9 months ago</div>
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-blue">YEDBKAA0023</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">RM 0</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">7 MYR</td>
@@ -426,7 +426,7 @@
                                         <div class="text-sm text-gray-900">2024-08-15 02:12 AM</div>
                                         <div class="text-sm text-gray-500">9 months ago</div>
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-blue">YEDBKAA0023</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">RM 0</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">7 MYR</td>
@@ -437,7 +437,7 @@
                                         <div class="text-sm text-gray-900">2024-08-15 02:12 AM</div>
                                         <div class="text-sm text-gray-500">9 months ago</div>
                                     </td>
-                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-pink">YEDBKAA0023</td>
+                                    <td class="px-6 py-4 whitespace-nowrap text-sm font-medium text-custom-blue">YEDBKAA0023</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm font-semibold text-green-600">+ 1 MYR</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">RM 0</td>
                                     <td class="px-6 py-4 whitespace-nowrap text-sm text-gray-800">7 MYR</td>
