perbaiki forgot pass

--- a/src/views/pages/admin/forgotpass.html
+++ b/src/views/pages/admin/forgotpass.html
@@ -40,7 +40,7 @@
             <div class="mb-10">
                 <img src="../../../../assets/images/logo.png" alt="Logo" class="inline-block align-middle mr-2 w-auto h-10">
             </div>
-            <h1 class="text-3xl md:text-5xl font-bold text-custom-teal-dark mb-4 leading-tight">Forgot Your <br>Password?</h1>
+            <h1 class="text-2xl md:text-4xl font-bold text-custom-teal-dark mb-4 leading-tight">Forgot Your Password?</h1>
             <p class="text-gray-500 text-lg mb-8">Enter your email and we'll send you a link to reset your password.</p>
 
             <form>
