--- a/src/views/pages/productadmin.html
+++ b/src/views/pages/productadmin.html
@@ -350,7 +350,7 @@
                         <div class="px-5 pb-5 mt-auto">
                             <div class="flex items-center justify-between">
                                 <p class="text-lg font-bold text-custom-teal">RM49.90</p>
-                                <a href="#" class="px-4 py-2 text-sm font-medium text-white bg-custom-teal rounded-xl hover:bg-custom-teal-dark transition-colors">Details</a>
+                                <a href="./product_detail.html" class="px-4 py-2 text-sm font-medium text-white bg-custom-teal rounded-xl hover:bg-custom-teal-dark transition-colors">Details</a>
                             </div>
                         </div>
                     </div>
@@ -362,7 +362,7 @@
                         <div class="px-5 pb-5 mt-auto">
                             <div class="flex items-center justify-between">
                                 <p class="text-lg font-bold text-custom-teal">RM39.90</p>
-                                <a href="#" class="px-4 py-2 text-sm font-medium text-white bg-custom-teal rounded-xl hover:bg-custom-teal-dark transition-colors">Details</a>
+                                <a href="./product_detail.html" class="px-4 py-2 text-sm font-medium text-white bg-custom-teal rounded-xl hover:bg-custom-teal-dark transition-colors">Details</a>
                             </div>
                         </div>
                     </div>
